--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,6 @@
   </head>
   <body>
     <div id="num-videos"></div>
-    <button id="anonymous-playlist" style="display: none">
-      Quick Playlist
-    </button>
+    <div id="anonymous-playlists" style="display: none"></div>
   </body>
 </html>
