--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,5 +22,7 @@
       <button id="back-button">Back</button>
       <div id="quick-playlists-list"></div>
     </div>
+
+    <button id="add-to-test-list">Add to Test List</button>
   </body>
 </html>
