--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,49 +5,222 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Youtube Playlist Generator</title>
+
     <script src="./ui.js"></script>
     <script src="./popup.js"></script>
+
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- <div class="container"> -->
     <div id="main-screen">
+      <!-- Login Buttons -->
       <div id="sign-in-buttons">
-        <button id="login-button" style="display: none">Sign In</button>
-        <button id="logout-button" style="display: none">Sign Out</button>
-      </div>
-
-      <div id="num-videos"></div>
-
-      <div id="playlists-container" style="display: none">
-        <button id="quick-playlists-button">Quick Playlists</button>
-
-        <div id="channel-playlists-container">
-          <div id="not-busy-container" style="display: none">
-            <button id="add-to-playlist-button">Add To Playlist</button>
-            <div id="channel-playlists" style="display: none">
-              <ul id="channel-playlists-list"></ul>
-              <button id="new-playlist-button">
-                Create new playlist
-              </button>
-              <form
-                action=""
-                id="create-new-playlist-form"
-                style="display: none"
-              >
-                <input type="text" maxLength="150" />
-                <button type="submit">Create</button>
-              </form>
+        <div class="row">
+          <div id="sign-in-button" class="hide">
+            <button class="btn-inline left">SIGN IN</button>
+          </div>
+          <div id="sign-out-button" class="hide">
+            <div class="valign-wrapper pointer hover-highlight">
+              <i class="material-icons grey-text col s2">exit_to_app</i>
+              <span class="col s8">Sign Out</span>
+              <span class="col s2">&nbsp;</span>
             </div>
           </div>
+        </div>
+      </div>
 
-          <div id="busy-container" style="display: none"></div>
+      <div id="sign-in-progress" class="row hide">
+        <div class="row"></div>
+        <div class="col s1"></div>
+        <div class="col s10">
+          <div class="progress grey lighten-2">
+            <div class="indeterminate blue lighten-1"></div>
+          </div>
+        </div>
+        <div class="col s1"></div>
+      </div>
+
+      <hr />
+
+      <!-- Video Count -->
+      <div class="row center">
+        <div id="num-videos"></div>
+      </div>
+
+      <div id="playlists-container">
+        <!-- Quick Playlists Button -->
+        <div class="row">
+          <div
+            id="quick-playlists-button"
+            class="valign-wrapper pointer hover-highlight"
+          >
+            <i class="material-icons grey-text col s2">playlist_play</i>
+            <span class="col s8 ">Quick Playlists</span>
+            <i class="material-icons grey-text col s2">chevron_right</i>
+          </div>
+        </div>
+
+        <!-- Add To Playlists Button -->
+        <div id="add-to-playlist-button">
+          <hr />
+          <div class="row">
+            <div class="valign-wrapper pointer hover-highlight">
+              <i class="material-icons grey-text col s2">playlist_add</i>
+              <span class="col s8">Add To Playlist</span>
+              <span class="col s2">&nbsp;</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Spinner -->
+        <div id="channel-spinner" class="row center hide">
+          <hr />
+          <div class="row"></div>
+          <div class="col s12">
+            <div class="preloader-wrapper active">
+              <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Channel Playlists -->
+
+        <div id="not-busy-container" class="container hide">
+          <hr />
+          <!-- Playlists List -->
+          <div id="channel-playlists" class="hide">
+            <h6>Save to...</h6>
+            <hr />
+            <div id="channel-playlists-list"></div>
+            <hr />
+            <!-- Create New Playlist Button -->
+            <div id="new-playlist-button" class="row valign-wrapper pointer">
+              <i class="material-icons grey-text">add</i>
+              <span class="col s11">Create new playlist</span>
+              <span class="col s1">&nbsp;</span>
+            </div>
+
+            <!-- New Playlist Form -->
+            <form
+              action=""
+              id="create-new-playlist-form"
+              class="hide"
+              autocomplete="off"
+            >
+              <div class="row">
+                <label for="title-input">Name</label>
+                <input
+                  id="title-input"
+                  type="text"
+                  maxLength="150"
+                  placeholder="Enter playlist name..."
+                />
+
+                <div class="input-message left">
+                  <span id="input-warning"></span>
+                </div>
+                <div class="input-message right">
+                  <span id="title-count">0</span>
+                  <span>/150</span>
+                </div>
+              </div>
+              <div class="row">
+                <button type="submit" class="btn-inline right">
+                  CREATE
+                </button>
+
+                <!-- <div class="blue-text text-accent-4 pointer">
+                  <span class="col s8"></span>
+                  <span class="col s4">CREATE</span>
+                </div> -->
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <!-- Progress Bar -->
+        <div
+          id="busy-container"
+          class="container grey darken-4 hide"
+        >
+          <hr />
+          <div class="row"></div>
+          <div class="row valign-wrapper">
+            <span id="progress-text" class="white-text col s7">&nbsp;</span>
+            <button id="cancel-button" class="btn-cancel col s4">CANCEL</button>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <div class="progress grey lighten-2">
+                <div
+                  id="progress-bar"
+                  class="determinate blue lighten-1"
+                  style="width: 0%"
+                ></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div id="quick-playlists" style="display: none">
-      <button id="back-button">Back</button>
-      <div id="quick-playlists-list"></div>
+    <!-- Quick Playlists Page -->
+    <div id="quick-playlists" class="hide">
+      <div class="row"></div>
+      <!-- Back Button -->
+      <div class="row">
+        <div id="back-button" class="valign-wrapper pointer hover-highlight">
+          <i class="material-icons grey-text col s2">chevron_left</i>
+          <span class="col s8">Back</span>
+          <span class="col s2">&nbsp;</span>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- Quick Playlists List -->
+      <div id="quick-playlists-list">
+        <!-- Spinner -->
+        <div id="quick-playlists-spinner" class="row center">
+          <div class="row center">
+            <div class="preloader-wrapper active">
+              <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- </div> -->
   </body>
 </html>
