Amended regex and removed empty html elements.
Regex updated to correct for false positives from youtube.com/user/ and youtube.com/redirect/ urls.

Removed empty html elements used for spacing, and replaced them with appropriate css solutions.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,7 +30,7 @@
           <div id="sign-in-button" class="hide">
             <button class="btn-inline left">SIGN IN</button>
           </div>
-          <div id="sign-out-button" class="hide">
+          <div id="sign-out-button" class="hide mt10">
             <div class="valign-wrapper pointer hover-highlight">
               <i class="material-icons grey-text col s2">exit_to_app</i>
               <span class="col s10">Sign Out</span>
@@ -40,14 +40,11 @@
       </div>
 
       <div id="sign-in-progress" class="row hide">
-        <div class="row"></div>
-        <div class="col s1"></div>
-        <div class="col s10">
+        <div class="col s10 offset-s1 mt10">
           <div class="progress grey lighten-2">
             <div class="indeterminate blue lighten-1"></div>
           </div>
         </div>
-        <div class="col s1"></div>
       </div>
 
       <hr />
@@ -84,8 +81,7 @@
         <!-- Spinner -->
         <div id="channel-spinner" class="row center hide">
           <hr />
-          <div class="row"></div>
-          <div class="col s12">
+          <div class="col s12 mt10">
             <div class="preloader-wrapper active">
               <div class="spinner-layer spinner-blue-only">
                 <div class="circle-clipper left">
@@ -169,8 +165,7 @@
 
         <!-- Progress Bar -->
         <div id="message-container" class="container grey darken-4 hide">
-          <div class="row"></div>
-          <div class="row valign-wrapper">
+          <div class="row valign-wrapper mt10">
             <span id="progress-text" class="white-text col s7"></span>
             <button id="cancel-button" class="btn-cancel col s4">CANCEL</button>
           </div>
@@ -201,9 +196,8 @@
 
     <!-- Quick Playlists Page -->
     <div id="quick-playlists" class="hide">
-      <div class="row"></div>
       <!-- Back Button -->
-      <div class="row">
+      <div class="row mt10">
         <div id="back-button" class="valign-wrapper pointer hover-highlight">
           <i class="material-icons grey-text col s2">chevron_left</i>
           <span class="col s10">Back</span>
