--- a/popup/popup.html
+++ b/popup/popup.html
@@ -167,7 +167,8 @@
         <div id="message-container" class="container grey darken-4 hide">
           <div class="row valign-wrapper mt10">
             <span id="progress-text" class="white-text col s7"></span>
-            <button id="cancel-button" class="btn-cancel col s4">CANCEL</button>
+            <button id="cancel-button" class="btn-inline btn-message-box col s4">CANCEL</button>
+            <button id="view-button" class="btn-inline btn-message-box col s4 hide">VIEW</button>
           </div>
           <div class="row">
             <div class="col s12">
